--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.86.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
@@ -44,6 +46,12 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"mode-watcher": "^0.5.0"
+		"@tauri-apps/api": "^1.5.1",
+		"mode-watcher": "^0.5.0",
+		"moment": "^2.30.1",
+		"print-js": "^1.6.0",
+		"radix-icons-svelte": "^1.2.1",
+		"svelte-radix": "^1.1.0",
+		"zod": "^3.22.4"
 	}
 }
