--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.471.0",
+		"mode-watcher": "^0.5.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sequential-preprocessor": "^2.0.2",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
@@ -47,7 +50,6 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tauri-apps/api": "^1.5.1",
-		"mode-watcher": "^0.5.0",
 		"moment": "^2.30.1",
 		"print-js": "^1.6.0",
 		"radix-icons-svelte": "^1.2.1",
