--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,8 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.1", features = [] }
 tauri-plugin-log = "2.0.0-rc"
+diesel = { version = "2.1.0", features = ["mysql", "chrono", "bigdecimal"] }
+dotenvy = "0.15"
+chrono = { version = "0.4", features = ["serde"] }
+bigdecimal = { version = "0.4.2", features = ["serde"] }
+fast_qr = { version = "0.12.0", features = ["image"] }
