--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"@tauri-apps/api": "^1.5.1",
+		"@tauri-apps/api": "^2",
+    	"@tauri-apps/plugin-opener": "^2",
 		"moment": "^2.30.1",
 		"print-js": "^1.6.0",
 		"radix-icons-svelte": "^1.2.1",
