--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.1", features = [] }
+tauri-plugin-opener = "2"
 tauri-plugin-log = "2.0.0-rc"
 diesel = { version = "2.1.0", features = ["mysql", "chrono", "bigdecimal"] }
 dotenvy = "0.15"
