--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tauri-apps/api": "^2",
-    	"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-shell": "^2",
 		"moment": "^2.30.1",
+		"pdfjs-dist": "^4.10.38",
 		"print-js": "^1.6.0",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-radix": "^1.1.0",
