--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2.2.1", features = [] }
 tauri-plugin-opener = "2"
 tauri-plugin-log = "2.0.0-rc"
+tauri-plugin-shell = "2.0.0"
 diesel = { version = "2.1.0", features = ["mysql", "chrono", "bigdecimal"] }
 dotenvy = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
