--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "app"
+name = "Butterfly"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Sales application"
+authors = ["abhishekvthakur.work@gmail.com"]
 license = ""
-repository = ""
+repository = "https://github.com/thakurabhiv/butterfly"
 edition = "2021"
 rust-version = "1.77.2"
 
@@ -18,6 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.4", features = [] }
 
 [dependencies]
+toml = "0.5.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
