--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-log": "^2.2.1",
 		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-process": "^2.2.0",
 		"@tauri-apps/plugin-shell": "^2",
 		"moment": "^2.30.1",
 		"pdfjs-dist": "^4.10.38",
