--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,10 +24,14 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.1", features = [] }
 tauri-plugin-opener = "2"
-tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0"
 diesel = { version = "2.1.0", features = ["mysql", "chrono", "bigdecimal"] }
 dotenvy = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
 bigdecimal = { version = "0.4.2", features = ["serde"] }
 fast_qr = { version = "0.12.0", features = ["image"] }
+tauri-plugin-process = "2"
+tauri-plugin-log = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2"
