Config template creation in appdata config directory on app start

--- a/src-tauri/config/config_templ.toml
+++ b/src-tauri/config/config_templ.toml
@@ -1,10 +1,10 @@
 [database]
-db_type = "mysql"
-host = "127.0.0.1"
-port = 3306
-username = "AbhishekT"
-password = "AbhishekT123"
-db_name = "butterfly_db"
+db_type = ""
+host = ""
+port = 0
+username = ""
+password = ""
+db_name = ""
 
 [sidecar]
 name = "binaries/goservices"
