--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ bigdecimal = { version = "0.4.2", features = ["serde"] }
 fast_qr = { version = "0.12.0", features = ["image"] }
 tauri-plugin-process = "2"
 tauri-plugin-log = "2"
+directories = "6.0.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
