--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ fast_qr = { version = "0.12.0", features = ["image"] }
 tauri-plugin-process = "2"
 tauri-plugin-log = "2"
 directories = "6.0.0"
+tauri-plugin-dialog = "2.2.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
